# saco-flow

./: .gitignore  AGENTS.md  CLAUDE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  ecohydro_spec.md  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
.gemini/: GEMINI.md
benchmarks/: __init__.py  benchmark.py  benchmark_10k.py  benchmark_diffusion.py  benchmark_kernels.py  diffusion.py  harness.py  kernels.py  run.py  scaling.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  TUNING.md  architecture.md  boundaries.md  data_structures.md  discretization.md  gpu_optimization.md  mass_conservation.md  overview.md  physics.md  testing.md  timesteps.md  visualisation.md
docs/kernels/: flow.md  flow_accumulation.md  flow_directions.md  infiltration.md  soil.md  soil_moisture.md  surface_routing.md  vegetation.md
src/: __init__.py  config.py  diagnostics.py  fields.py  geometry.py  gui.py  initialization.py  main.py  output.py  params.py  simulation.py
src/core/: __init__.py  dtypes.py  geometry.py
src/fields/: __init__.py  base.py  scratch.py  state.py  static.py
src/kernels/: __init__.py  flow.py  infiltration.py  protocol.py  soil.py  utils.py  (+1 more)
tests/: __init__.py  conftest.py  test_core.py  test_fields.py  test_flow.py  test_geometry.py  test_gui.py  test_infiltration.py  test_kernel_dynamics.py  test_kernel_equivalence.py  test_kernel_registry.py  test_large_grid.py  test_params.py  test_setup.py  test_simulation.py  test_soil.py  test_validation.py  test_vegetation.py
(+9 files in other folders)
