[project]
name = "saco-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "rasterio>=1.3.0",
    "ruff>=0.1.0",
    "taichi>=1.7.0",
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]